[gd_scene load_steps=9 format=3 uid="uid://ci8uddxiqsxym"]

[ext_resource type="Script" uid="uid://nixhx82v41qs" path="res://Scripts/start.gd" id="1_3bxa3"]
[ext_resource type="Shader" uid="uid://cij44fpm23um5" path="res://Scripts/title.gdshader" id="2_5ogh5"]
[ext_resource type="FontVariation" uid="uid://ud73lv1shyos" path="res://Assets/Fonts/jersey15-italic.tres" id="2_r48yj"]
[ext_resource type="PackedScene" uid="uid://cm43q8shw55ww" path="res://Scenes/config.tscn" id="4_lb6bl"]
[ext_resource type="Theme" uid="uid://cxvtw8coicn34" path="res://Assets/Fonts/new_theme_big.tres" id="5_rk01k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_bk35t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ogh5"]
shader = ExtResource("2_5ogh5")
shader_parameter/offset_amount = 15.0
shader_parameter/time_speed = 1.0
shader_parameter/direct_uv_offset = 0.005

[sub_resource type="ViewportTexture" id="ViewportTexture_lb6bl"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[node name="Start" type="Node2D"]
script = ExtResource("1_3bxa3")
platform = "Linux"

[node name="Camera" type="Camera2D" parent="."]

[node name="OutputName" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = -696.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 136.0
tooltip_text = "Your GIF's name. Note that most special characters, including spaces, will be replaced/removed.
GIF will be saved to '/Dialoguer Assets/Frames'"
focus_neighbor_left = NodePath("../Clear")
focus_neighbor_top = NodePath("../FilePath")
focus_neighbor_right = NodePath("../GIFsFolder")
focus_neighbor_bottom = NodePath("../FilePath")
focus_next = NodePath("../FilePath")
focus_previous = NodePath("../CloseProgram")
theme_override_font_sizes/font_size = 35
placeholder_text = "GIF Name (example: 'name' becomes 'name.gif')"

[node name="FilePath" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = -696.0
offset_top = 160.0
offset_right = -16.0
offset_bottom = 288.0
tooltip_text = "Grabs the provided File from '/Dialoguer Assets/Dialog'"
focus_neighbor_left = NodePath("../CloseProgram")
focus_neighbor_top = NodePath("../OutputName")
focus_neighbor_right = NodePath("../Info")
focus_neighbor_bottom = NodePath("../OutputName")
focus_next = NodePath("../StartTyping")
focus_previous = NodePath("../OutputName")
theme_override_font_sizes/font_size = 35
placeholder_text = "Dialogue File (example: name.json)"

[node name="StartTyping" type="Button" parent="."]
offset_left = 16.0
offset_top = -288.0
offset_right = 344.0
offset_bottom = -104.0
tooltip_text = "Start Typing out the provided Text."
focus_neighbor_left = NodePath("../OutputName")
focus_neighbor_top = NodePath("../Info")
focus_neighbor_right = NodePath("../OutputName")
focus_neighbor_bottom = NodePath("../GIFsFolder")
focus_next = NodePath("../GIFsFolder")
focus_previous = NodePath("../FilePath")
theme_override_font_sizes/font_size = 40
text = "Start
"

[node name="Configs" type="Button" parent="."]
offset_left = 368.0
offset_top = -288.0
offset_right = 696.0
offset_bottom = -104.0
theme_override_font_sizes/font_size = 40
text = "Configurations"

[node name="GIFsFolder" type="Button" parent="."]
offset_left = 16.0
offset_top = -88.0
offset_right = 344.0
offset_bottom = 88.0
tooltip_text = "Opens the GIFs Folder."
focus_neighbor_left = NodePath("../OutputName")
focus_neighbor_top = NodePath("../StartTyping")
focus_neighbor_right = NodePath("../Clear")
focus_neighbor_bottom = NodePath("../Info")
focus_next = NodePath("../Clear")
focus_previous = NodePath("../StartTyping")
theme_override_font_sizes/font_size = 40
text = "Open GIFs Folder"
autowrap_mode = 3

[node name="Clear" type="Button" parent="."]
offset_left = 368.0
offset_top = -88.0
offset_right = 696.0
offset_bottom = 88.0
tooltip_text = "Clears any .png Files in the Frames Folder. Don't worry, your GIFs will be safe :3"
focus_neighbor_left = NodePath("../GIFsFolder")
focus_neighbor_top = NodePath("../StartTyping")
focus_neighbor_right = NodePath("../OutputName")
focus_neighbor_bottom = NodePath("../CloseProgram")
focus_next = NodePath("../Info")
focus_previous = NodePath("../GIFsFolder")
theme_override_font_sizes/font_size = 40
text = "Clear Frames"

[node name="Info" type="Button" parent="."]
offset_left = 16.0
offset_top = 104.0
offset_right = 344.0
offset_bottom = 288.0
tooltip_text = "More Information about this Program."
focus_neighbor_left = NodePath("../FilePath")
focus_neighbor_top = NodePath("../GIFsFolder")
focus_neighbor_right = NodePath("../CloseProgram")
focus_neighbor_bottom = NodePath("../StartTyping")
focus_next = NodePath("../CloseProgram")
focus_previous = NodePath("../Clear")
theme_override_font_sizes/font_size = 40
text = "About Dialoguer
"

[node name="CloseProgram" type="Button" parent="."]
offset_left = 368.0
offset_top = 104.0
offset_right = 696.0
offset_bottom = 280.0
tooltip_text = "Exits the Program. Bye bye!"
focus_neighbor_left = NodePath("../Info")
focus_neighbor_top = NodePath("../Clear")
focus_neighbor_right = NodePath("../FilePath")
focus_neighbor_bottom = NodePath("../StartTyping")
focus_next = NodePath("../OutputName")
focus_previous = NodePath("../Info")
theme_override_font_sizes/font_size = 40
text = "Close Program"

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.0196078, 0, 0.0392157, 1)
z_index = -1
position = Vector2(-3.05176e-05, 1.52588e-05)
scale = Vector2(1456, 656)
texture = SubResource("CanvasTexture_bk35t")

[node name="Version" type="Label" parent="."]
offset_left = 352.0
offset_top = 288.0
offset_right = 696.0
offset_bottom = 313.0
text = "Dialoguer v0.2"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="CleanConfirmationDialog" type="ConfirmationDialog" parent="."]
title = ".png and .import files found"
initial_position = 4
size = Vector2i(545, 112)
ok_button_text = "Cleanup"
dialog_text = "This usually indicates leftover Frames in the Frames Folder.
Would you like to remove them?"
cancel_button_text = "Exit without Cleanup"

[node name="InfoDialog" type="AcceptDialog" parent="."]
title = "About Dialoguer"
initial_position = 4
size = Vector2i(740, 280)
dialog_text = "Version: 0.2
Release: PLATFORM
GitHub: https://github.com/Xander-XRR/dialoguer

This Project is fully open-source, so feel free to use the code however you'd like!

For any Bug Reports or Suggestions, please create a
new Issue on the GitHub page or reach out over Discord: xanderxrr"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = -3288.0
offset_top = -128.0
offset_right = -2328.0
offset_bottom = 192.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(960, 320)
render_target_update_mode = 4

[node name="Title" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
offset_right = 960.0
offset_bottom = 320.0
theme_override_fonts/italics_font = ExtResource("2_r48yj")
theme_override_font_sizes/bold_italics_font_size = 170
theme_override_font_sizes/italics_font_size = 170
theme_override_font_sizes/mono_font_size = 170
theme_override_font_sizes/normal_font_size = 170
theme_override_font_sizes/bold_font_size = 170
bbcode_enabled = true
text = "[wave amp=20 freq=-4][rainbow freq=.03 sat=0.8 val=0.8 speed=1.0][i]Dialoguer[/i][/rainbow][/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleShadered" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
material = SubResource("ShaderMaterial_5ogh5")
position = Vector2(-360, -152)
texture = SubResource("ViewportTexture_lb6bl")

[node name="Configurations" parent="." node_paths=PackedStringArray("start_node") instance=ExtResource("4_lb6bl")]
visible = false
start_node = NodePath("..")

[node name="FileFoundntDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "File not found!"
initial_position = 4
size = Vector2i(757, 160)
theme = ExtResource("5_rk01k")
dialog_text = "The JSON File at the spesified path was not found.
 Please Check the spelling and location of the file."

[connection signal="pressed" from="StartTyping" to="." method="_on_start_typing_pressed"]
[connection signal="pressed" from="Configs" to="." method="_on_config_pressed"]
[connection signal="pressed" from="GIFsFolder" to="." method="_on_frames_folder_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="CloseProgram" to="." method="_on_close_program_pressed"]
[connection signal="canceled" from="CleanConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="CleanConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
